Fix #277: wrapped library name with span

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -231,6 +231,10 @@ tr {
   background-color: #2ecc71;
 }
 
-#libDesc {
+#libLink {
     text-decoration: none;
+}
+
+#libLink span:hover {
+    text-decoration: underline;
 }
